@@ -5,6 +5,10 @@
 		"Description" : "Just another map.",
 		"Preview" : "jammys_despair.png",
 		"Keywords": ["community"],
+		"TriggerScripts": [
+			"scripts/TriggerHelper.js",
+			"random/jammys_despair_triggers.js"
+		],
 		"SupportedBiomes": "generic/",
 		"CircularMap" : true
 	}
